--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div id="formulaire">
-  <img src="/img/imageFormRecherche.png">
+  <img src="/img/chair.jpeg">
 </div>
 <div class="container">
   <div class="row">
