--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -91,7 +91,7 @@
                 <br>
                 <div class="row">
                     <div class="col">
-                        <button type="submit" class="btn btn-success btn-block btn-lg" style="height: initial;">S'inscrire !</button>
+                        <button type="submit" class="btn btn-success ml-auto d-flex btn-lg" style="height: initial;">S'inscrire !</button>
                     </div>
                 </div>
                 
