--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -3,13 +3,13 @@
 
 {% block body %}
     <div id="formulaire">
-        <img src="/img/imageFormRecherche.png"/>
+        <img src="/img/chair.jpeg"/>
     </div>
     <div class="container">    
-        <div class="row mx-auto my-2">
+        {# <div class="row mx-auto my-2">
             <a href="{{ path('logement_liste') }}">Retour</a>
-        </div>
-        <h1>Ajoutez votre bien !</h1>
+        </div> #}
+        <h3>Ajoutez votre bien !</h3>
         {% for flash_message in app.session.flashBag.get('error') %}
             <div class="alert alert-error">
                 {{ flash_message }}
@@ -52,7 +52,7 @@
             <h4>Paramètres de l'habitat</h4>
             <div id="parametres"></div>
             <br>
-            <button class="btn btn-success btn-lg btn-block">Ajoutez votre bien</button>
+            <button class="btn btn-success btn-lg ml-auto d-flex">Ajoutez votre bien</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
