--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,7 +13,7 @@
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
-        <h1 class="h3 mb-3 font-weight-normal">Connectez-vous !</h1>
+        <h3 class="h3 mb-3 font-weight-normal">Connectez-vous !</h3>
         <label for="inputEmail" class="sr-only">Adresse Email</label>
         <input type="email" value="{{ last_username }}" name="_username" id="inputEmail" class="form-control" placeholder="Votre adresse e-mail" required autofocus>
         <br>
@@ -21,7 +21,7 @@
         <input type="password" name="_password" id="inputPassword" class="form-control" placeholder="Votre mot de passe" required>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <br>
-        <button class="btn btn-lg btn-primary" type="submit" style="height: initial;">
+        <button class="btn btn-lg btn btn-success ml-auto d-flex" type="submit" style="height: initial;">
             Se connecter
         </button>
     </form>
