--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,7 +72,6 @@ h3 {
         padding-top: 30px;
     }
 
-/* fix width and make user scroll with mouse/touch to see the items */
 @media screen and (max-width:768px){
     .block4{max-width:280px;flex:1 0 100%;overflow:hidden}  
     .carousel{overflow:hidden;}
@@ -85,6 +84,10 @@ h3 {
 #title{
 	text-transform: uppercase;
 	font-weight: 600;
+}
+
+.dropdown-menu.show {
+	right: 0;
 }
 
 #btnDeco{
@@ -100,18 +103,18 @@ h3 {
 }
 
 #avatarLogin{
-	margin-right: 3em;
+	margin-right: 0.8em;
 }
+
 #Utilisateur{
-	margin-right: 3em;
-	margin-top: 0.5em;
 	text-decoration:none; 
 	color: black;
 	font-weight: bold;
 }
 
 #cloche{
-	margin-right: 3em;
+	margin-right: 1em;
+	margin-left: 3em;
 }
 
 #cloche:hover{
