ajout lien contact #13

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -132,7 +132,7 @@
           <ul class="list-unstyled">
             <li><a href="">Mentions légales</a></li>
             <li><a href="">Qui sommes nous</a></li>
-            <li><a href="">Contactez nous</a></li>
+            <li><a href="{{ path('contact_route') }}">Contactez nous</a></li>
           </ul>
         </div>
       </div>
