--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -77,7 +77,7 @@
       {% else %}
       <ul class="nav navbar-nav"> 
         <li class="nav-item">
-          <a class="nav-link" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
+            <a class="btn btn-success" href="{{ path('logement_ajout') }}">Ajouter un bien</a>
         </li>       
         <li class="nav-item">
           <a class="nav-link" href="/register">Inscription</a>
