--- a/templates/emails/reservation.html.twig
+++ b/templates/emails/reservation.html.twig
@@ -1,11 +1,11 @@
-<h3>Réservation N° {{ id_resa }}</h3><br>
-Bonjour {{ prenom }}!<br>
-Voici un récapitulatif de votre réservation réalisé le {{ resa.getDateCreation() }}<br>
+<h3>Réservation N° {{ resa.getId() }}</h3><br>
+Bonjour {{ resa.getUtilisateur().getPrenom() }}!<br>
+Voici un récapitulatif de votre réservation réalisé le {{ resa.getDateCreation()|date('d/m/Y') }}<br>
 <strong>Logement :</strong>{{ resa.getLogement().getNom() }}<br>
 <strong>Adresse : </strong>{{ resa.getLogement().getAdresse() }}<br>
-<strong>Date de début : </strong>{{ resa.getDateDebut() }}<br>
-<strong>Date de fin : </strong>{{ resa.getDateFin() }}<br>
-<strong>Prix : </strong>{{ resa.getPrixTotal() }}
+<strong>Date de début : </strong>{{ resa.getDateDebut()|date('d/m/Y') }}<br>
+<strong>Date de fin : </strong>{{ resa.getDateFin()|date('d/m/Y') }}<br>
+<strong>Prix : </strong>{{ resa.getPrixTotal() }} €
 <br>
 Merci et à bientôt !
 <br>
