--- a/templates/logement/reservation.html.twig
+++ b/templates/logement/reservation.html.twig
@@ -1,65 +1,78 @@
 {% extends 'base-paiement.html.twig' %}
 {% block title %} Paiement en cours {% endblock %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="/css/stripe.css">
+{% endblock %}
 {% block body %}
 <div class="container">
     <div class="row">
-            <div class="col-12">
-                {% for flash_message in app.session.flashBag.get('error') %}
-                    <div class="alert alert-danger">
-                        {{ flash_message }}
-                    </div>
-                {% endfor %}
-                <form action="{{ path('paiement_route', {'id': logement.id}) }}" method="post">
-                    {# Logement #}
-                    <h3>1. Sélectionnez vos options :</h3>
-                    <div class="form-group">
-                        <label for="logement">Logement sélectionné</label>
-                        <input type="text" id="logement" name="logement" readonly class="form-control" value="{{ logement.getNom() ~ ' - ' ~ logement.getAdresse() ~ ' - ' ~ logement.getVille().getNom() }}">
-                        <input type="hidden" value="{{ logement.getId() }}" name="id_logement" />
-                    </div>
-                    <div class="form-group">
-                        <label for="nbPersonne">Nombre de personnes</label>
-                        <input name="nbPersonne" id="nbPersonne" type="number" class="form-control" value="1" >
-                    </div>
-                    <div class="form-group">
-                        <label for="dateDebut" class="col">Date de début</label>
-                        <input type="text" class="form-control col" name="dateDebut" id="dateDebut" value="{{ "tomorrow"|date('d/m/Y') }}"/>                
-                    </div>
-                    <div class="form-group">
-                        <label for="dateFin" class="col">Date de fin</label>
-                        <input type="text" class="form-control col" name="dateFin" id="dateFin" value="{{ "tomorrow + 1 day"|date("d/m/Y") }}"/>
-                    </div>                    
-                    <div class="form-group">
-                        <label for="dateFin" class="col">Prix Total</label>
-                        <input type="text" class="form-control col" name="dateFin" id="dateFin" value="0"/> €
-                    </div>
-                    {# Locataire #}
-                    <h3>2. Vos informations :</h3>
-                    <div class="form-group">
-                        <label for="logement">Nom</label>
-                        <input type="text" id="nom" name="logement" readonly class="form-control" value="{{ app.user.getNom() }}">
-                    </div>
-                    <div class="form-group">
-                        <label for="logement">Prénom</label>
-                        <input type="text" id="prenom" name="logement" readonly class="form-control" value="{{ app.user.getPrenom() }}">
-                    </div>
-                    <div class="form-group">
-                        <label for="logement">E-mail</label>
-                        <input type="text" id="email" name="logement" readonly class="form-control" value="{{ app.user.getEmail() }}">
-                    </div>
-                    <div class="form-group">
-                        <label for="logement">Téléphone</label>
-                        <input type="text" id="telephone" name="logement" readonly class="form-control" value="{{ app.user.getTelephone() }}">
-                    </div>
-                    <div class="form-group">
-                        <label for="logement">Adresse</label>
-                        <input type="text" id="adresse" name="logement" readonly class="form-control" value="{{ app.user.getAdresse() }}">
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-success" type="submit">Payer</button>
-                    </div>
-                </form>
-            </div>       
+        <div class="col-12">
+            {% for flash_message in app.session.flashBag.get('error') %}
+                <div class="alert alert-danger">
+                    {{ flash_message }}
+                </div>
+            {% endfor %}
+            <form action="{{ path('paiement_route', {'id': logement.id}) }}" method="post" id="paiement-form">
+                {# Logement #}
+                <h3>1. Sélectionnez vos options :</h3>
+                <div class="form-group">
+                    <label for="logement">Logement sélectionné</label>
+                    <input type="text" id="logement" name="logement" readonly class="form-control" value="{{ logement.getNom() ~ ' - ' ~ logement.getAdresse() ~ ' - ' ~ logement.getVille().getNom() }}">
+                </div>
+                <div class="form-group">
+                    <label for="nbPersonne">Nombre de personnes</label>
+                    <input name="nbPersonne" id="nbPersonne" type="number" class="form-control" value="1" >
+                </div>
+                <div class="form-group">
+                    <label for="dateDebut" class="col">Date de début</label>
+                    <input type="text" class="form-control col" name="dateDebut" id="dateDebut" value="{{ "tomorrow"|date('d/m/Y') }}"/>                
+                </div>
+                <div class="form-group">
+                    <label for="dateFin" class="col">Date de fin</label>
+                    <input type="text" class="form-control col" name="dateFin" id="dateFin" value="{{ "+ 2 days"|date("d/m/Y") }}"/>
+                </div>                    
+                <div class="form-group">
+                    <label for="dateFin" class="col">Prix Total</label>
+                    <input type="text" class="form-control col" name="prixTotal" id="prixTotal" value="0"/> €
+                </div>
+                {# Locataire #}
+                <h3>2. Vos informations :</h3>
+                <div class="form-group">
+                    <label for="logement">Nom</label>
+                    <input type="text" id="nom" name="logement" readonly class="form-control" value="{{ app.user.getNom() }}">
+                </div>
+                <div class="form-group">
+                    <label for="logement">Prénom</label>
+                    <input type="text" id="prenom" name="logement" readonly class="form-control" value="{{ app.user.getPrenom() }}">
+                </div>
+                <div class="form-group">
+                    <label for="logement">E-mail</label>
+                    <input type="text" id="email" name="logement" readonly class="form-control" value="{{ app.user.getEmail() }}">
+                </div>
+                <div class="form-group">
+                    <label for="logement">Téléphone</label>
+                    <input type="text" id="telephone" name="logement" readonly class="form-control" value="{{ app.user.getTelephone() }}">
+                </div>
+                <div class="form-group">
+                    <label for="logement">Adresse</label>
+                    <input type="text" id="adresse" name="logement" readonly class="form-control" value="{{ app.user.getAdresse() }}">
+                </div>
+                {# Méthode de paiement #}
+                <h3>3. Paiement</h3>
+                <div class="form-group">
+                    <div id="card-errors" class="alert alert-danger" role="alert"></div>
+                    <label for="card-element">Rentrez la carte de crédit</label>
+                    <div id="card-element"></div>                        
+                </div>                
+                <div class="form-group">
+                    <button class="btn btn-success" type="submit">Payer</button>
+                </div>
+            </form>
+        </div>       
     </div>
 </div>
+{% endblock %}
+{% block javascripts %}
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="/js/stripe.js"></script>
 {% endblock %}
