--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -72,7 +72,6 @@ h3 {
         padding-top: 30px;
     }
 
-/* fix width and make user scroll with mouse/touch to see the items */
 @media screen and (max-width:768px){
     .block4{max-width:280px;flex:1 0 100%;overflow:hidden}  
     .carousel{overflow:hidden;}
@@ -85,6 +84,10 @@ h3 {
 #title{
 	text-transform: uppercase;
 	font-weight: 600;
+}
+
+.dropdown-menu.show {
+	right: 0;
 }
 
 #btnDeco{
@@ -100,18 +103,18 @@ h3 {
 }
 
 #avatarLogin{
-	margin-right: 3em;
+	margin-right: 0.8em;
 }
+
 #Utilisateur{
-	margin-right: 3em;
-	margin-top: 0.5em;
 	text-decoration:none; 
 	color: black;
 	font-weight: bold;
 }
 
 #cloche{
-	margin-right: 3em;
+	margin-right: 1em;
+	margin-left: 3em;
 }
 
 #cloche:hover{
@@ -221,13 +224,13 @@ h3 {
 }
 
 .btn-photo{
-	background-color: rgb(201, 6, 6);
+	background-color: #C64300;
 	color:white;
 	position: absolute;
 	width: 12.5em;
 	margin-top: 31.25em;
 	margin-left: 4.375em;
-	border-radius: 2.5em 2.5em 2.5em 2.5em;
+	border-radius: .25rem;
 }
 
 .btn-recherche:hover, .btn-photo:hover{
@@ -361,14 +364,14 @@ ul.list-unstyled li a{
 	width: auto;
 	padding: 1em;
 	margin-top: -3.125em;
-	color: white;
+	color: white !important;
 	font-weight: bold;
 	font-size: 1.25em;
 	transition: 0.6s ease;
 	border-radius: 0 0.1875em 0.1875em 0;
 	user-select: none;
 	-webkit-user-select: none;
-	background-color: #C64300;
+	background-color: rgba(0, 0, 0, 0.5);
   }
   
   /* Position the "next button" to the right */
@@ -380,7 +383,7 @@ ul.list-unstyled li a{
   /* On hover, add a black background color with a little bit see-through */
   .precedent:hover,
   .suivant:hover {
-	background-color: #C64300;
+	background-color: rgba(0, 0, 0, 0.7);;
   }
   
   /* Number text (1/3 etc) */
@@ -512,11 +515,6 @@ ul.list-unstyled li a{
   
   .cardProfil .card-body{
 	  border: none;
-  }
-  
-  
-  .cardProfil .mb-3:hover{
-	  
   }
   
   .cardProfil form{
