--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -17,7 +17,7 @@
         {% endfor %}   
         <br>
         {{ form_start(form) }}
-            <div class="form-group">
+            <div class="form-group" >
                 {{ form_row(form.id_type) }}
             </div>
             <div class="form-group">
@@ -34,9 +34,9 @@
             </div>
             <div class="form-group">
                 <label for="logement_ville">Ville</label>
-                <input type="text" class="form-control" autocomplete="off" id="logement_ville" name="logement_ville" />
+                <input type="text" class="form-control" autocomplete="off" id="logement_ville" name="logement_ville" required="required"/>
             </div>
-            <div class="form-group">
+            <div class="form-group" required="required">
                 {{ form_row(form.prix) }}
             </div>
             <div class="form-group">
