--- a/templates/base-paiement.html.twig
+++ b/templates/base-paiement.html.twig
@@ -28,14 +28,16 @@
       <a href=""> Code&Rise</a>
     </div>
   </footer>
-
   {% block javascripts %}
-  <script type="text/javascript" src="/js/jquery.min.js"></script>
-  <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
-  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/js/gijgo.min.js"></script>
-  <script type="text/javascript" src="/js/slider.js"></script>
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/js/gijgo.min.js"></script>
+    <script type="text/javascript" src="/js/global.js"></script>    
   <script type="text/javascript" src="/js/global.js"></script>
+    <script type="text/javascript" src="/js/global.js"></script>    
+    <script src="https://js.stripe.com/v3/"></script>
+    <script src="/js/stripe.js"></script>
   {% endblock %}
 </body>
 
