--- a/templates/logement/reservation.html.twig
+++ b/templates/logement/reservation.html.twig
@@ -20,20 +20,34 @@
                     <input type="text" id="logement" name="logement" readonly class="form-control" value="{{ logement.getNom() ~ ' - ' ~ logement.getAdresse() ~ ' - ' ~ logement.getVille().getNom() }}">
                 </div>
                 <div class="form-group">
+                    <label for="dateDebut" class="col">Date de début</label>
+                    <input type="text" class="form-control col dateRes" name="dateDebut" id="dateDebut" value="{{ "tomorrow"|date('d/m/Y') }}"/>                
+                </div>
+                <div class="form-group">
+                    <label for="dateFin" class="col">Date de fin</label>
+                    <input type="text" class="form-control col dateRes" name="dateFin" id="dateFin" value="{{ "+ 2 days"|date("d/m/Y") }}"/>
+                </div>
+                <div class="form-group">
                     <label for="nbPersonne">Nombre de personnes</label>
                     <input name="nbPersonne" id="nbPersonne" type="number" class="form-control" value="1" >
                 </div>
                 <div class="form-group">
-                    <label for="dateDebut" class="col">Date de début</label>
-                    <input type="text" class="form-control col" name="dateDebut" id="dateDebut" value="{{ "tomorrow"|date('d/m/Y') }}"/>                
+                    <label for="dateFin" class="col">Prix Unitaire</label>                    
+                    <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">€</div>
+                        </div>
+                        <input type="number" readonly class="form-control col" name="prixUni" id="prixUni" value="{{ logement.getPrix() }}"/>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <label for="dateFin" class="col">Date de fin</label>
-                    <input type="text" class="form-control col" name="dateFin" id="dateFin" value="{{ "+ 2 days"|date("d/m/Y") }}"/>
-                </div>                    
-                <div class="form-group">
                     <label for="dateFin" class="col">Prix Total</label>
-                    <input type="text" class="form-control col" name="prixTotal" id="prixTotal" value="0"/> €
+                    <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">€</div>
+                        </div>
+                        <input type="number" class="form-control col" name="prixTotal" id="prixTotal" value=""/>
+                    </div>
                 </div>
                 {# Locataire #}
                 <h3>2. Vos informations :</h3>
@@ -71,8 +85,4 @@
         </div>       
     </div>
 </div>
-{% endblock %}
-{% block javascripts %}
-    <script src="https://js.stripe.com/v3/"></script>
-    <script src="/js/stripe.js"></script>
 {% endblock %}
