--- a/templates/logement/reservation.html.twig
+++ b/templates/logement/reservation.html.twig
@@ -7,6 +7,9 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
+            <h3>{{ logement.getNom() ~ ' - ' ~ logement.getAdresse() ~ ' - ' ~ logement.getVille().getNom() }}</h3>
+        </div>
+        <div class="col-12">
             {% for flash_message in app.session.flashBag.get('error') %}
                 <div class="alert alert-danger">
                     {{ flash_message }}
@@ -14,61 +17,68 @@
             {% endfor %}
             <form action="{{ path('paiement_route', {'id': logement.id}) }}" method="post" id="paiement-form">
                 {# Logement #}
-                <h3>1. Sélectionnez vos options :</h3>
-                <div class="form-group">
-                    <label for="logement">Logement sélectionné</label>
-                    <input type="text" id="logement" name="logement" readonly class="form-control" value="{{ logement.getNom() ~ ' - ' ~ logement.getAdresse() ~ ' - ' ~ logement.getVille().getNom() }}">
-                </div>
-                <div class="form-group">
-                    <label for="dateDebut" class="col">Date de début</label>
-                    <input type="text" class="form-control col dateRes" name="dateDebut" id="dateDebut" value="{{ "tomorrow"|date('d/m/Y') }}"/>                
-                </div>
-                <div class="form-group">
-                    <label for="dateFin" class="col">Date de fin</label>
-                    <input type="text" class="form-control col dateRes" name="dateFin" id="dateFin" value="{{ "+ 2 days"|date("d/m/Y") }}"/>
-                </div>
-                <div class="form-group">
-                    <label for="nbPersonne">Nombre de personnes</label>
-                    <input name="nbPersonne" id="nbPersonne" type="number" class="form-control" value="1" >
-                </div>
-                <div class="form-group">
-                    <label for="dateFin" class="col">Prix Unitaire</label>                    
-                    <div class="input-group mb-2">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text">€</div>
-                        </div>
-                        <input type="number" readonly class="form-control col" name="prixUni" id="prixUni" value="{{ logement.getPrix() }}"/>
+                <h4>1. Sélectionnez vos options :</h4>
+                <br>
+                <div class="form-group row">
+                    <div class="col">
+                        <label for="dateDebut">Date de début</label>
+                    </div>
+                    <div class="col">
+                        <label for="dateFin">Date de fin</label>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="dateFin" class="col">Prix Total</label>
-                    <div class="input-group mb-2">
-                        <div class="input-group-prepend">
-                            <div class="input-group-text">€</div>
-                        </div>
-                        <input type="number" class="form-control col" name="prixTotal" id="prixTotal" value=""/>
+                <div class="form-group row">
+                    <div class="col">
+                        <input type="text" class="form-control" name="dateDebut" id="dateDebut" value="{{ "tomorrow"|date('d/m/Y') }}"/>
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control col" name="dateFin" id="dateFin" value="{{ "+ 2 days"|date("d/m/Y") }}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col">
+                        <label for="nbPersonne">Nombre de personnes</label>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col">
+                        <input name="nbPersonne" id="nbPersonne" type="number" class="form-control" value="1" >
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col">
+                        <label for="dateFin">Prix par nuit :</label>
+                        {{ logement.getPrix() }} €
+                        <input type="hidden" readonly class="form-control col" name="prixUni" id="prixUni" value="{{ logement.getPrix() }}"/>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col">
+                        <label for="prixTotal">Prix Total :</label>
+                        <span id="spanTotal"></span>
+                        <input type="hidden" readonly class="form-control" id="prixTotal" name="prixTotal" value=""/>
                     </div>
                 </div>
                 {# Locataire #}
                 <h3>2. Vos informations :</h3>
                 <div class="form-group">
-                    <label for="logement">Nom</label>
+                    <label for="logement" class="col">Nom</label>
                     <input type="text" id="nom" name="logement" readonly class="form-control" value="{{ app.user.getNom() }}">
                 </div>
                 <div class="form-group">
-                    <label for="logement">Prénom</label>
+                    <label for="logement" class="col">Prénom</label>
                     <input type="text" id="prenom" name="logement" readonly class="form-control" value="{{ app.user.getPrenom() }}">
                 </div>
                 <div class="form-group">
-                    <label for="logement">E-mail</label>
+                    <label for="logement" class="col">E-mail</label>
                     <input type="text" id="email" name="logement" readonly class="form-control" value="{{ app.user.getEmail() }}">
                 </div>
                 <div class="form-group">
-                    <label for="logement">Téléphone</label>
+                    <label for="logement" class="col">Téléphone</label>
                     <input type="text" id="telephone" name="logement" readonly class="form-control" value="{{ app.user.getTelephone() }}">
                 </div>
                 <div class="form-group">
-                    <label for="logement">Adresse</label>
+                    <label for="logement" class="col">Adresse</label>
                     <input type="text" id="adresse" name="logement" readonly class="form-control" value="{{ app.user.getAdresse() }}">
                 </div>
                 {# Méthode de paiement #}
