--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -13,53 +13,43 @@
                 {{ form_start(form) }}
                 <div class="row">
                     <div class="col">
-                        {{ form_label(form.nom, 'Nom') }}
+                        <div class="form-group">
+                            {{ form_row(form.nom) }}
+                        </div>
                     </div>
                     <div class="col">
-                        {{ form_label(form.prenom, 'Prénom') }}
+                        <div class="form-group">
+                            {{ form_row(form.prenom) }}
+                        </div>
                     </div>
                 </div>
+               
+                <br>
                 <div class="row">
                     <div class="col">
-                        {{ form_widget(form.nom) }}
-                    </div>
-                    <div class="col">
-                        {{ form_widget(form.prenom) }}
+                        <div class="form-group">
+                            {{ form_row(form.email) }}
+                        </div>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col">
-                        {{ form_label(form.email, 'E-mail') }}
+                        <div class="form-group">
+                            {{ form_row(form.telephone) }}
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        {{ form_widget(form.email) }}
-                    </div>
-                </div>
+             
                 <br>
                 <div class="row">
                     <div class="col">
-                        {{ form_label(form.telephone, 'Numéro de téléphone') }}
+                        <div class="form-group" >
+                            {{ form_row(form.adresse) }}
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        {{ form_widget(form.telephone) }}
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col">
-                        {{ form_label(form.adresse, 'Adresse (Numéro et Rue)') }}
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        {{ form_widget(form.adresse) }}
-                    </div>
-                </div>
+        
                 <br>
                 <div class="row">
                     <div class="col">
