--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -170,29 +170,11 @@
           <button type="submit" class="btn btn-recherche " onclick="location.href='{{ path('logement_reservation', {'id': logement.id }) }}'">Réserver</button>
         </form>
       </div>
-
-      {# <form action="/recherche" method="post">
-        <div class="form-group">
-          <input type="text" class="form-control" id="inputDepartureDate" placeholder="Date de départ" value="{{ data['depart'] }}"
-            name="depart">
-        </div>
-        <div class="form-group">
-          <input type="text" class="form-control" id="inputArrivalDate" placeholder="Date d'arrivée" value="{{ data['arrivee'] }}"
-            name="arrivee">
-        </div>
-        <div class="form-group">
-          <input type="number" name="nb" class="form-control" id="selectTravelers" min="1" max="10" placeholder="Nombre de voyageurs"
-            value="{{ data['nb'] }}" />
-        </div>
-        <button type="submit" class="btn btn-recherche">Rechercher</button>
-      </form> #}
-
     </div>
   </div>
-  <br />
 </div>
 
-<div class="container">
+<!--<div class="container">
   <hr />
   <div class="row">
     <div class="col-lg-12">
@@ -200,7 +182,7 @@
         <div class="row">
           <div class="comments col-md-12" id="comments">
             <h3 class="mb-2">Commentaires</h3>
-            <!--<div class="comment mb-2 row">
+            <div class="comment mb-2 row">
                 <div class="comment-avatar col-md-1 col-sm-2 text-center pr-1">
                     <a href=""><img class="mx-auto rounded-circle img-fluid" src="http://demos.themes.guide/bodeo/assets/images/users/m103.jpg" alt="avatar"></a>
                 </div>
