--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -46,6 +46,9 @@
                 {{ form_row(form.nbCouchage) }}
             </div>
             <div class="form-group">
+                {{ form_row(form.commodites) }}
+            </div>
+            <div class="form-group">
                 {{ form_row(form.photosUploads) }}
             </div>
             <br>
