--- a/templates/logement/ajout-logement.html.twig
+++ b/templates/logement/ajout-logement.html.twig
@@ -49,6 +49,12 @@
                 {{ form_row(form.commodites) }}
             </div>
             <div class="form-group">
+                {{ form_row(form.reglement) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.activiteAproximite) }}
+            </div>
+            <div class="form-group">
                 {{ form_row(form.photosUploads) }}
             </div>
             <br>
