Dashbord et Lien par catégorie #21

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -22,7 +22,7 @@
                             <div class="block4-wrap">
                                 {% for t in types %}                                                      
                                     <div class="block4" id="{{ t.id }}">
-                                        <img class="d-block w-100" src="/img/types-habitat/{{ t.pathimg }}" alt="Péniche">
+                                        <a href="/categorie-logement/{{ t.type }}"><img class="d-block w-100" src="/img/types-habitat/{{ t.pathimg }}" alt="Péniche"></a>
                                         <div class="my-captions">
                                             <h5>{{ t.type }}</h5>
                                             <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
