--- a/templates/home/profil.html.twig
+++ b/templates/home/profil.html.twig
@@ -13,8 +13,8 @@
 
 
       <ul class="nav nav-tabs">
-        <li><a data-toggle="tab" href="#home" class="list-group-item list-group-item-action active">Tableau de bord</a></li>
-        <li><a data-toggle="tab" href="#voyages" class="list-group-item list-group-item-action">Voyages</a></li>
+        <li><a data-toggle="tab" class="list-group-item list-group-item-action dashboard">Tableau de bord</a></li>
+        <li><a data-toggle="tab" href="#voyages" class="list-group-item list-group-item-action active">Voyages</a></li>
         <li><a data-toggle="tab" href="#messages" class="list-group-item list-group-item-action">Messages</a></li>
         <li><a data-toggle="tab" href="#profil" class="list-group-item list-group-item-action">Informations</a></li>
       </ul>
@@ -27,16 +27,8 @@
           <div class="row">
             <div class="col-md-12">
               <div class="tab-content">
-                <div class="tab-pane active" id="home">
-                 <div class="row">
-                  <div class="col-md-12">
-                    <h4>Tableau de bord</h4>
-                    <hr>
-                  </div>
-                </div>
-              </div>
-
-              <div class="tab-pane" id="voyages">
+                
+              <div class="tab-pane active" id="voyages">
                 <div class="row">
                   <div class="col-md-12">
                     <h4>Vos réservations</h4>
