--- a/templates/home/profil.html.twig
+++ b/templates/home/profil.html.twig
@@ -1,29 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Contact{% endblock %}
+{% block title %}Mon Profil{% endblock %}
 
 {% block body %}
 <div id="formulaire">
   <img src="/img/chair.jpeg">
 </div>
-
 <div class="container">
   <div class="row">
     <div class="col-md-3 navProfil">
-
-
       <ul class="nav nav-tabs">
         <li><a data-toggle="tab" href="#home" class="list-group-item list-group-item-action active">Tableau de bord</a></li>
-        <li><a data-toggle="tab" href="#voyages" class="list-group-item list-group-item-action">Voyages</a></li>
+        <li><a data-toggle="tab" href="#voyages" class="list-group-item list-group-item-action">Mes réservations</a></li>
         <li><a data-toggle="tab" href="#messages" class="list-group-item list-group-item-action">Messages</a></li>
         <li><a data-toggle="tab" href="#profil" class="list-group-item list-group-item-action">Informations</a></li>
       </ul>
-
     </div>
     <div class="col-md-9">
       <div class="card noborder">
         <div class="cardProfil">
-
           <div class="row">
             <div class="col-md-12">
               <div class="tab-content">
@@ -35,7 +30,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="tab-pane" id="voyages">
                 <div class="row">
                   <div class="col-md-12">
