rendre dynamique le nbPersonne et nbCouchage #24

--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -48,15 +48,13 @@
       <div class="row info-icones">
         <div class="col">
           <img class="icones" src="/img/picto/voyageur.svg" />
-          3 voyageurs
-        </div>
-        <div class="col">
-          <img class="icones" src="/img/picto/porte.svg" />
-          2 chambres
+          {{ logement.nbPersonne }} voyageurs
         </div>
         <div class="col">
           <img class="icones" src="/img/picto/lit.svg" />
-          <span> 2 lits</span>
+          <span> {{ logement.nbCouchage}} lits</span>
+        </div>
+        <div class="col">
         </div>
       </div>
 
